--- a/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
+++ b/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
@@ -196,7 +196,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="cameraButton" destination="d0u-US-Pff" id="God-Jq-aZ3"/>
                         <outlet property="photoImageView" destination="O5d-lP-Vnr" id="hQr-F9-EJs"/>
+                        <outlet property="photoLibraryButton" destination="LnR-Nd-IGv" id="khQ-RC-L6g"/>
                         <outlet property="titleTextView" destination="aK9-BB-r9V" id="Vmb-tt-212"/>
                     </connections>
                 </viewController>
